# utils

./: pyproject.toml
examples/project/images/: hillshade.png.aux.xml  slopes.png.aux.xml
examples/project/metadata/: hillslopes.json  soils.json
examples/project/rasters/: accumulations.asc  accumulations.asc.aux.xml  channels.asc  channels.asc.aux.xml  directions.asc  directions.asc.aux.xml  elevations.asc  elevations.asc.aux.xml  hillslopes.asc  hillslopes.asc.aux.xml  slopes.asc  slopes.asc.aux.xml  soils.asc  soils.asc.aux.xml
examples/project/vectors/: channels.geojson  outlets.geojson  soils.geojson  sources.geojson
src/roms_utils/: __init__.py  cmap.py  convert.py  download.py  visualize.py
