[tool.poetry]
name = "roms-utils"
version = "0.1.0"
description = ""
authors = ["Brandon Sims"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
libraster = {path = "deps/libraster-1.9.5.3-cp310-cp310-linux_x86_64.whl"}
numpy = "^1.24.1"
gdal = "3.4.0"
geopandas = "^0.12.2"
py3dep = "^0.13.10"
pygeohydro = "^0.13.10"
requests = "^2.28.2"
pyproj = "^3.4.1"
shapely = "^2.0.0"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.10"
pydocstyle = "^6.3.0"
types-requests = "^2.28.11.8"
commitizen = "^2.39.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "79"
